# GP-GOMEA

./: .dep.inc  .dockerignore  .gitattributes  .gitignore  ARMADILLO_NOTICE.txt  CMakeLists.txt  COPYRIGHT  Dockerfile  LICENSE  Makefile  Makefile-Python_Release.mk  Makefile-impl-py.mk  Makefile-impl.mk  Makefile-variables.mk  README.md  deps_fedora  deps_ubuntu  environment.yml  examplepythonprob.py  final_output.txt  m  m_fedora  m_ubuntu  main.cpp  params.txt  params_gomea.txt  params_semback.txt  params_sgp.txt  pyMakefile  python_exposer.cpp  requirements.txt  setup.py  test.py  user-config.jam
Evolution/: EvolutionRun.cpp  EvolutionRun.h  EvolutionState.cpp  EvolutionState.h  GenerationHandler.cpp  GenerationHandler.h  PopulationInitializer.cpp  PopulationInitializer.h
Fitness/: AccuracyFitness.cpp  AccuracyFitness.h  Fitness.cpp  Fitness.h  PythonFitness.cpp  PythonFitness.h  SymbolicRegressionFitness.cpp  SymbolicRegressionFitness.h  SymbolicRegressionLinearScalingFitness.cpp  SymbolicRegressionLinearScalingFitness.h
GOMEA/: GOMEAFOS.cpp  GOMEAFOS.h  GOMEAGenerationHandler.cpp  GOMEAGenerationHandler.h  GOMEATreeInitializer.cpp  GOMEATreeInitializer.h  GOMVariator.cpp  GOMVariator.h
Genotype/: Node.cpp  Node.h
Operators/: OpVariable.h  Operator.cpp  Operator.h
Operators/Boolean/: OpAnd.h  OpNand.h  OpNor.h  OpNot.h  OpOr.h  OpXor.h
Operators/Regression/: OpAnalyticLog_01.h  OpAnalyticQuotient.h  OpAnalyticQuotient_01.h  OpAnd.h  OpCos.h  OpExp.h  OpLog.h  OpMinus.h  OpNewProtectedDivision.h  OpPlus.h  OpRegrConstant.h  OpSin.h  OpSquare.h  OpSquareRoot.h  OpTimes.h
R/: gpgomea.R
RunHandling/: IMSHandler.cpp  IMSHandler.h
Selection/: TournamentSelection.cpp  TournamentSelection.h
Semantics/: SemanticBackpropagator.cpp  SemanticBackpropagator.h  SemanticLibrary.cpp  SemanticLibrary.h  TestDerivatives.h
SklearnGPGOMEA/: GPGOMEARegressor.py  test.py
Tests/: TestsSemanticBackpropagation.h
Utils/: ConfigurationOptions.h  Exceptions.h  KDTree.cpp  KDTree.h  Logger.cpp  Utils.cpp  Utils.h
Variation/: SubtreeVariator.cpp  SubtreeVariator.h  TreeInitializer.cpp  TreeInitializer.h
docker/fedora/: Dockerfile
docker/ubuntu/: Dockerfile
examples/R/: cv_example.R
examples/python/: examplepythonprob.py  grid_search.py  quickstart.py
nbproject/: Makefile-Debug.mk  Makefile-Python_Release.mk  Makefile-Release.mk  Makefile-Valgrind.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Python_Release.bash  Package-Release.bash  Package-Valgrind.bash  configurations.xml  project.xml
nbproject/private/: Makefile-variables.mk  configurations.xml  private.xml
params/: params_gomea.txt  params_multiobj.txt  params_pythonprob.txt  params_semback.txt  params_sgp.txt
pyGPGOMEA/: GPGOMEARegressor.py
pyGPGOMEA.egg-info/: PKG-INFO  SOURCES.txt
pythonpkg/: requirements.txt  setup.py
pythonpkg/pyGPGOMEA/: GPGOMEARegressor.py  __init__.py
pythonpkg/pyGPGOMEA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: CMakeLists.txt  gpgomea_python.cpp  gpgomea_rcpp.cpp  main.cpp
src/Evolution/: CMakeLists.txt  EvolutionRun.cpp  EvolutionState.cpp  GenerationHandler.cpp  NSGA2GenerationHandler.cpp  PopulationInitializer.cpp
src/Fitness/: AccuracyFitness.cpp  CMakeLists.txt  Fitness.cpp  InterpretabilityPHIFitness.cpp  MOFitness.cpp  PythonFitness.cpp  SolutionSizeFitness.cpp  SymbolicRegressionFitness.cpp  SymbolicRegressionLinearScalingFitness.cpp
src/GOMEA/: CMakeLists.txt  GOMEAFOS.cpp  GOMEAGenerationHandler.cpp  GOMEATreeInitializer.cpp  GOMVariator.cpp
src/Genotype/: CMakeLists.txt  Node.cpp
src/Include/GPGOMEA/Evolution/: EvolutionRun.h  EvolutionState.h  GenerationHandler.h  NSGA2GenerationHandler.h  PopulationInitializer.h
src/Include/GPGOMEA/Fitness/: AccuracyFitness.h  Fitness.h  InterpretabilityPHIFitness.h  MOFitness.h  PythonFitness.h  SolutionSizeFitness.h  SymbolicRegressionFitness.h  SymbolicRegressionLinearScalingFitness.h
src/Include/GPGOMEA/GOMEA/: GOMEAFOS.h  GOMEAGenerationHandler.h  GOMEATreeInitializer.h  GOMVariator.h
src/Include/GPGOMEA/Genotype/: Node.h
src/Include/GPGOMEA/Operators/: OpVariable.h  Operator.h
src/Include/GPGOMEA/Operators/Boolean/: OpAnd.h  OpNand.h  OpNor.h  OpNot.h  OpOr.h  OpXor.h
src/Include/GPGOMEA/Operators/Regression/: OpAnalyticLog_01.h  OpAnalyticQuotient.h  OpAnalyticQuotient_01.h  OpCos.h  OpExp.h  OpLog.h  OpMinus.h  OpNewProtectedDivision.h  OpPlus.h  OpRegrConstant.h  OpSin.h  OpSquare.h  OpSquareRoot.h  OpTimes.h
src/Include/GPGOMEA/RunHandling/: IMSHandler.h
src/Include/GPGOMEA/Selection/: TournamentSelection.h
src/Include/GPGOMEA/Semantics/: SemanticBackpropagator.h  SemanticLibrary.h  TestDerivatives.h
src/Include/GPGOMEA/Utils/: ConfigurationOptions.h  Exceptions.h  KDTree.h  Logger.h  Utils.h
src/Include/GPGOMEA/Variation/: SubtreeVariator.h  TreeInitializer.h
src/Operators/: CMakeLists.txt  Operator.cpp
src/RunHandling/: CMakeLists.txt  IMSHandler.cpp
src/Selection/: CMakeLists.txt  TournamentSelection.cpp
src/Semantics/: CMakeLists.txt  SemanticBackpropagator.cpp  SemanticLibrary.cpp
src/Utils/: CMakeLists.txt  KDTree.cpp  Logger.cpp  Utils.cpp
src/Variation/: CMakeLists.txt  SubtreeVariator.cpp  TreeInitializer.cpp
